--- a/tables/test_ranks.tex
+++ b/tables/test_ranks.tex
@@ -3,7 +3,7 @@
 \label{tab:test_ranks}
 \begin{tabular}{lrrrr}
 \toprule
-{} &  Simulated Annealing &  GRASP &  Genetic Algorithm &  KMeans \\
+{} &  Sim. Annealing &  GRASP &  Genetic Alg. &  KMeans \\
 \midrule
 Iris2      &                 4.00 &   2.00 &               3.00 &    1.00 \\
 Iris4      &                 3.00 &   1.00 &               4.00 &    2.00 \\
